@@ -20,6 +20,7 @@ import org.slf4j.LoggerFactory;
 import java.util.*;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static com.powsybl.iidm.network.util.TieLineReports.*;
 
@@ -157,41 +158,41 @@ public final class TieLineUtil {
     /**
      * If it exists, find the dangling line in the merging network that should be associated to a candidate dangling line in the network to be merged.
      * Two dangling lines in different IGM should be associated if:
-     * - they have the same non-null X-node code and are the only dangling lines to have this X-node code in their respective networks
+     * - they have the same non-null pairing key and are the only dangling lines to have this pairing key in their respective networks
      * OR
-     * - they have the same non-null X-node code and are the only connected dangling lines to have this X-node code in their respective networks
+     * - they have the same non-null pairing key and are the only connected dangling lines to have this pairing key in their respective networks
      *
      * @param candidateDanglingLine candidate dangling line in the network to be merged
-     * @param getDanglingLinesByXnodeCode function to retrieve dangling lines with a given X-node code in the merging network.
+     * @param getDanglingLinesByPairingKey function to retrieve dangling lines with a given pairing key in the merging network.
      * @param associateDanglingLines function associating two dangling lines
      */
-    public static void findAndAssociateDanglingLines(DanglingLine candidateDanglingLine,
-                                                     Function<String, List<DanglingLine>> getDanglingLinesByXnodeCode,
+    public static void findAndAssociateDanglingLines(DanglingLine candidateDanglingLine, Function<String, List<DanglingLine>> getDanglingLinesByPairingKey,
                                                      BiConsumer<DanglingLine, DanglingLine> associateDanglingLines) {
         Objects.requireNonNull(candidateDanglingLine);
-        Objects.requireNonNull(getDanglingLinesByXnodeCode);
+        Objects.requireNonNull(getDanglingLinesByPairingKey);
         Objects.requireNonNull(associateDanglingLines);
-        // mapping by ucte xnode code
-        if (candidateDanglingLine.getUcteXnodeCode() != null) { // if X-node code null: no associated dangling line
+        // mapping by pairing key
+        if (candidateDanglingLine.getPairingKey() != null) { // if pairing key null: no associated dangling line
             if (candidateDanglingLine.getNetwork().getDanglingLineStream(DanglingLineFilter.UNPAIRED)
                     .filter(d -> d != candidateDanglingLine)
-                    .filter(d -> candidateDanglingLine.getUcteXnodeCode().equals(d.getUcteXnodeCode()))
-                    .anyMatch(d -> d.getTerminal().isConnected())) { // check that there is no connected dangling line with same X-node code in the network to be merged
+                    .filter(d -> candidateDanglingLine.getPairingKey().equals(d.getPairingKey()))
+                    .anyMatch(d -> d.getTerminal().isConnected())) { // check that there is no connected dangling line with same pairing key in the network to be merged
                 return;                                         // in that case, do nothing
             }
-            List<DanglingLine> dls = getDanglingLinesByXnodeCode.apply(candidateDanglingLine.getUcteXnodeCode());
+            List<DanglingLine> dls = getDanglingLinesByPairingKey.apply(candidateDanglingLine.getPairingKey());
             if (dls != null) {
                 if (dls.size() == 1) { // if there is exactly one dangling line in the merging network, merge it
                     associateDanglingLines.accept(dls.get(0), candidateDanglingLine);
                 }
                 if (dls.size() > 1) { // if more than one dangling line in the merging network, check how many are connected
-                    List<DanglingLine> connectedDls = dls.stream().filter(dl -> dl.getTerminal().isConnected()).toList();
+                    List<DanglingLine> connectedDls = dls.stream().filter(dl -> dl.getTerminal().isConnected()).collect(Collectors.toList());
                     if (connectedDls.size() == 1) { // if there is exactly one connected dangling line in the merging network, merge it. Otherwise, do nothing
                         associateDanglingLines.accept(connectedDls.get(0), candidateDanglingLine);
                     }
                 }
             }
         }
+
     }
 
     public static double getR(DanglingLine dl1, DanglingLine dl2) {
